Updated codebase to use Gricko instead of ELO